# ConsoleUtils

./: CMakeLists.txt
include/console_utils/: colors.hpp  time.hpp
src/: CMakeLists.txt  main.cpp  time.cpp
tests/: CMakeLists.txt
